# naulatex

./: .gitignore  CMakeLists.txt  README.md  Session.vim  document.tex  examplenotes.txt.tex  homework.tex  open.sh  preamble.tex  setup.tex  subj.sh  subject.txt
chapters/chapter1/: chapter1.tex
chapters/chapter2/: chapter2.tex
cmake/: version.cmake
commands/: commands.tex
data/: open.txt  open.vim  subject.txt
matter/: backmatter.tex  endtitle.tex  frontmatter.tex  title.tex
old/: Session.vim  document.tex
old/commands/: commands.tex
old/preamble/: preamble.tex
old/variables/: texvariables.tex
preamble/: preamble.tex
preamble/old/: packages.tex  packagessetup.tex  preamble.tex
setup/amp/: bibliography.bib
src/: CMakeLists.txt  cmakeDefines.tex.in  defines.tex  document.tex  latexmkrc.in  preamble.tex
src/chapters/chapter4/: chapter4.tex
src/cmake/: FindLatexMk.cmake  FindTexLogFilter.cmake  setup.cmake
src/jobs/kurs/: defines.tex
src/jobs/lab/: defines.tex
src/jobs/mod/: defines.tex
src/jobs/referat/: defines.tex
src/jobs/rgr/: defines.tex
src/matter/: title.tex
src/subjects/ads/: bibliography.bib  chapters.tex
src/subjects/ads/chapters/chapter1/: chapter1.tex
src/subjects/highprog/: defines.tex
src/subjects/highprog/chapters/chapter1/: chapter1.tex
src/subjects/highprog/chapters/chapter2/: chapter2.tex
src/subjects/highprog/chapters/chapter4/: chapter4.tex
src/subjects/matan/: defines.tex
src/subjects/matstat/: chapters.tex  defines.tex
src/subjects/matstat/chapters/chapter1/: chapter1.tex
src/subjects/matstat/chapters/chapter2/: chapter2.tex
src/subjects/matstat/chapters/chapter3/: chapter3.tex
src/subjects/matstat/chapters/chapter4/: chapter4.tex
src/subjects/matstat/chapters/chapter5/: chapter5.tex
src/subjects/nummet/: bibliography.bib
src/subjects/nummet/chapters/chapter1/: chapter1.tex
src/subjects/nummet/matter/: title.tex
src/subjects/nummetVas/: defines.tex
src/subjects/nummetVas/chapters/chapter5/: chapter5.tex
src/subjects/oop/: bibliography.bib  defines.tex
src/subjects/oop/chapters/chapter1/: chapter1.tex
src/subjects/opmethods/: chapters.tex
src/subjects/opmethods/chapters/chapter1/: chapter1.tex
src/subjects/opmethods/chapters/chapter2/: chapter2.tex
src/subjects/sysprog/chapters/chapter1/: chapter1.tex
src/templates/: cmakeDefines.tex.in  continuous.sh.in  defines.tex  latexmkrc.in  redefines.tex.in
src/templates/chapters/chapter2/: chapter2.tex
src/templates/jobs/kurs/: defines.tex
src/templates/jobs/labj/: defines.tex
src/templates/jobs/mod/: defines.tex
src/templates/jobs/rgr/: defines.tex
src/templates/matter/: title.tex
src/templates/subjects/ads/: chapters.tex  defines.tex
src/templates/subjects/highprog/: bibliography.bib
src/templates/subjects/highprog/chapters/chapter1/: chapter1.tex
src/templates/subjects/highprog/chapters/chapter3/: chapter3.tex
src/templates/subjects/matan/: chapters.tex
src/templates/subjects/matan/chapters/chapter1/: chapter1.tex
src/templates/subjects/matstat/: bibliography.bib  chapters.tex
src/templates/subjects/nummet/: defines.tex
src/templates/subjects/nummetVas/: bibliography.bib
src/templates/subjects/oop/: chapters.tex
src/templates/subjects/opmethods/: defines.tex
src/templates/subjects/opmethods/chapters/chapter1/: chapter1.tex
src/templates/subjects/opmethods/chapters/chapter2/: chapter2.tex
src/templates/subjects/sysprog/: defines.tex
subjects/ads/: bibliography.bib
subjects/matan/: body.tex
subjects/matstat/: bibliography.bib
subjects/nummet/: bibliography.bib  title.tex
subjects/oop/: body.tex
title/: title.tex
variables/: texvariables.tex  variables.tex
varriables/: varriables.tex
(+40 files in other folders)
